--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
-.App {
-  text-align: center;
+.nav-bar Link {
+  text-decoration: none;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 9vw;
 }
 
 .nav-bar img {
-  width: 2vw;
-  height: 6vh;
+  width: 2.5vw;
+  height: 5vh;
+  object-fit: contain;
+}
+
+.nav-bar {
+  padding: 1vh 4vw 1vh 4vw;
+  align-items: center;
 }
 
 .nav-bar,
@@ -18,7 +31,7 @@
 }
 
 #Home {
-  height: 80vh;
+  height: 90vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -27,7 +40,7 @@
 }
 
 .intro {
-  background-image: url("./assets/food.jpeg");
+  background-image: url("../public/assets/food.jpeg");
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -44,16 +57,97 @@
   width: 100%;
 }
 
-.image-hightlight{
+.image-hightlight {
   display: flex;
   justify-content: space-around;
   width: 80%;
-  margin: 0;
+  margin-top: 6vh;
 }
 
 .image-hightlight img {
   width: 10vw;
   height: 20vh;
-  border-radius: 30vw;
+  clip-path: circle(40%);
   object-fit: cover;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5vh;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.input-container input {
+  margin: 0.5vh 0 0.5vh 0;
+}
+
+.recipe-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  column-gap: 2vw;
+  row-gap: 4vh;
+  margin-top: 10vh;
+}
+
+.favorite {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2vw;
+}
+
+.favorite-img-container {
+  flex: 1;
+  height: 20vh;
+}
+
+.favorite-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.favorite-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: firebrick;
+  box-shadow: 0px 0 2px 0 black;
+  width: 20vw;
+}
+
+.favorite-item-name {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  text-align: center;
 }
